[project]
name = "jeseki-code-quality"
version = "0.1.0"
description = "Generate an offline HTML code quality report."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.26.8",
]

[project.scripts]
code-quality = "code_quality.cli:app"
cq = "code_quality.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_quality"]
